test/stg/error/dataCons3.stg
-- duplicate data constructors
data Bool1 = True | False | True | False;
data Bool2 = Nil | False | False | True;
